--- a/my_style.css
+++ b/my_style.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: border-box;
@@ -20,15 +20,28 @@ body {
 body div.container {
     min-width: 1024px;
     margin: 0 auto;
+} */
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: rgb(236, 232, 232);
+    height: 2000px;
+}
+
+header div nav {
+    margin: 50px;
+    padding: 15px;
 }
 
 header h1 {
     background-image: url(image/logo.png);
     background-repeat: no-repeat;
     background-size: contain;
-    margin: 100px 200px;
+    margin: 40px 10px;
     padding: 50px 200px 50px 300px;
-    background-color: rgba(148, 130, 154, 0.877);
+    background-color: white;
     border-radius: 10%;
     transition-property: all;
 }
@@ -36,8 +49,8 @@ header h1 {
 header h1:hover {
     opacity: 80%;
     color:rgba(158, 88, 188, 0.715);
-    background-color:azure;
-    transition-duration: 2s;
+    background-color:rgb(236, 232, 232);
+    transition-duration: 1s;
 }
 
 main .shelf_1 h2 {
@@ -95,7 +108,7 @@ main .poem {
     line-height: 15px;
     font-size: 20px;
     font-family: fantasy;
-    color: white;
+    color: black;
 }
 main .shelf_1 ul {
     display: flex;
@@ -192,8 +205,5 @@ footer div.container h3 {
 }
 
 @media only screen and (max-width: 1200px) {
-    body {
-      background-color: lightgray;
-      color: black;
-    }
+
 }
