--- a/style.css
+++ b/style.css
@@ -1,26 +1,3 @@
-/* *,
-*:before,
-*:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: rgb(181, 150, 192);
-    color: white;
-    height: 2000px;
-}
-
-body div.container {
-    min-width: 1024px;
-    margin: 0 auto;
-} */
 html {
     scroll-behavior: smooth;
 }
@@ -31,7 +8,7 @@ body {
 }
 
 header div {
-    margin: 50px;
+    margin: 0px 0px 25px;
     padding: 15px;
 }
 
@@ -39,7 +16,7 @@ header h1 {
     background-image: url(image/logo.png);
     background-repeat: no-repeat;
     background-size: contain;
-    margin: 40px 10px;
+    margin: 10px 10px;
     padding: 50px 200px 50px 300px;
     background-color: white;
     border-radius: 10%;
@@ -54,6 +31,15 @@ header h1:hover {
     cursor: pointer;
 }
 
+button {
+    background-color: rgba(145, 151, 223, 0.715);
+    border: 1px solid #e2d4ec;
+    border-radius: 5px;
+    color: aliceblue;
+    line-height: 1rem;
+    padding: 0.5rem 0.7rem;
+    margin: 0.1rem;
+}
 main .shelf h2 {
     text-align: center;
     padding: 15px 40px;
@@ -169,6 +155,12 @@ footer div.container h3 {
     flex-direction: column;
     align-items: center;
 }
+
+
+.search {
+    display: flex;
+    justify-content: center;
+}
 @media only screen and (max-width: 1200px) {
 
 }
@@ -180,7 +172,19 @@ footer div.container h3 {
     height: 80vh;
 }
 #footerclip {
-    height: 10rem;
+    height: 5rem;
     margin-top: 5rem;
     clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);    
+}
+
+#searchInput {
+    margin: 0 5px;
+    padding: 0.3rem;
+    border-radius: 5px;
+    border-color: rgba(123, 131, 230, 0.5);
+    box-shadow: 0 0 0 4px rgba(145, 151, 223, 0.715);
+}
+#searchInput:focus {
+    border-color: rgba(28, 123, 202, 0.583);
+    outline: 0;
 }
