update footerclip style with transform and transition

--- a/style.css
+++ b/style.css
@@ -174,7 +174,12 @@ footer div.container h3 {
 #footerclip {
     height: 5rem;
     margin-top: 5rem;
-    clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);    
+    clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
+    transition: transform 1s;
+}
+
+#footerclip:hover {
+    transform:scale(1.5) rotate(10deg);
 }
 
 #searchInput {
